# strands_tabletop_perception

./: README.md
camera_tracker/: CMakeLists.txt  package.xml
camera_tracker/src/: camera_tracker.cpp
camera_tracker_srv_definitions/: CMakeLists.txt
classifier_srv_definitions/srv/: segment_and_classify.srv
do_learning_srv_definitions/: CMakeLists.txt
do_learning_srv_definitions/srv/: learn_object.srv
dynamic_object_learning/: CMakeLists.txt  package.xml
dynamic_object_learning/include/: do_learning.h
dynamic_object_learning/launch/: do_learning.launch  do_learning.launch~
dynamic_object_learning/src/: do_learning.cpp  test_dol_from_files.cpp
evaluate_tabletop_views/: CMakeLists.txt  package.xml
evaluate_tabletop_views/scripts/: evaluate_tabletop_views_service.py
evaluate_tabletop_views/src/: evaluate_tabletop_views_service.cpp
generic_3d_object_classifier/: CMakeLists.txt  package.xml
generic_3d_object_classifier/include/: feature_extractor.h  my_classifier.h  visual_codebook.h
generic_3d_object_classifier/launch/: classifier.launch  classifier.launch~
generic_3d_object_classifier/src/: feature_extractor.cpp  main.cpp  my_classifier.cpp  visual_codebook.cpp
known_table_locator/: CMakeLists.txt  package.xml
learn_objects_action/: package.xml
learn_objects_action/scripts/: learn.py  server.py
manual_table_storer/: CMakeLists.txt  package.xml
manual_table_storer/scripts/: store.py
multiview_object_recognizer/: CMakeLists.txt  package.xml
multiview_object_recognizer/include/: boost_graph_extension.h  boost_graph_visualization_extension.h  multiview_object_recognizer_service.h  myGraphClasses.h  singleview_object_recognizer.h  world_representation.h  world_representation_ros.h
multiview_object_recognizer/launch/: joystick_core.launch  multiview_recognition.launch  multiview_recognition_isolated.launch  singleview_recognition_isolated.launch
multiview_object_recognizer/src/: boost_graph_extension.cpp  boost_graph_visualization_extension.cpp  eval_main.cpp  main.cpp  multiview_object_recognizer_service.cpp  myGraphClasses.cpp  singleview_object_recognizer.cpp  test_multiview_recognizer.cpp  world_representation.cpp  world_representation_ros.cpp
multiview_object_recognizer_batch/: CMakeLists.txt  package.xml
multiview_object_recognizer_batch/include/: functions.h  myGraphClasses.h  myRecognizer.h
multiview_object_recognizer_batch/src/: evaluate_gt.cpp  functions.cpp  main.cpp  myGraphClasses.cpp  myRecognizer.cpp
mumford_shah_segmentation/: CMakeLists.txt
mumford_shah_segmentation/src/: MS_segmenter.cpp  test_segmenter_from_file.cpp
mv_object_classifier/: CMakeLists.txt  README.md  package.xml
mv_object_classifier/launch/: mv_classifier_from_files_demo.launch
mv_object_classifier/src/: mv_object_classifier_node.cpp  test_mv_obj_classifier_from_files.cpp
object_classifier/: CMakeLists.txt  README.md~  package.xml
object_classifier/launch/: classifier_demo.launch  classifier_with_segmentation.launch
object_classifier/src/: shape_simple_classifier_node.cpp  test.cpp
object_rgbd_segmenter/: CMakeLists.txt  package.xml
object_rgbd_segmenter/src/: segmenter_service.cpp
object_search_action/: CMakeLists.txt  package.xml  setup.py
object_search_action/action/: ObjectSearch.action
object_search_action/launch/: object_search.launch
object_search_action/scripts/: demand_object_search_task.py  object_search_server.py
object_view_generator/scripts/: view_points_service.py  view_points_service.py~
object_view_generator/srv/: GetTrajectoryPoints.srv
pcd_filter/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
pcd_filter/include/: my_filter.h
pcd_filter/src/: main.cpp
pcl_object_segmenter/: CMakeLists.txt  package.xml
pcl_object_segmenter/src/: segmenter_service.cpp  test.cpp
pcl_visualizer/: CMakeLists.txt
pcl_visualizer/src/: pcl_visualizer.cpp  remote_pcl_visualizer.cpp  remote_usage_example.cpp
pcl_visualizer_srv_definitions/: CMakeLists.txt
pcl_visualizer_srv_definitions/msg/: ColorHandler.msg
pcl_visualizer_srv_definitions/srv/: AddPointCloud.srv  AddText.srv  CreateViewport.srv  RemoveAllPointClouds.srv  SetBackgroundColor.srv  SetWindowName.srv
perceive_tabletop_action/: CMakeLists.txt  package.xml  setup.py
perceive_tabletop_action/action/: PerceiveTabletop.action
perceive_tabletop_action/launch/: classifier.launch  octomap.launch  perceive_tabletop.launch  perceive_tabletop_params.launch  view_planning.launch
perceive_tabletop_action/scripts/: add_table.py  cancel_perceive_tabletop_action.py  perceive_tabletop_action_client.py  perceive_tabletop_action_server.py  register_task.py  results_gui.py
perceive_tabletop_action/src/: PerceiveActionServer.py  PerceiveTabletopActionClient.py  (+1 more)
primitives_to_tables/: CMakeLists.txt  package.xml
qsr_kb/: CMakeLists.txt  README.md  package.xml
qsr_kb/scripts/: kb.py  (+5 more)
recognition_srv_definitions/: CMakeLists.txt
scene_recorder/: CMakeLists.txt  package.xml
scene_recorder/action/: TakeSnapshot.action
scene_recorder/scripts/: replay_snapshots.py  take_snapshot.py  take_snapshot_and_recognize_objects.py  test_read_write.py
scene_recorder/src/: scene_snapshot.cpp  scene_snapshot.cpp.autosave
singleview_object_recognizer/: CMakeLists.txt  package.xml
singleview_object_recognizer/action/: CheckObjectPresence.action
singleview_object_recognizer/include/: recognizer_ros.h
singleview_object_recognizer/launch/: recognition_service.launch
singleview_object_recognizer/scripts/: action_server.py
singleview_object_recognizer/src/: CheckObjectPresence.cpp  CheckObjectPresence_client.cpp  recognition_service.cpp  recognizer_ros.cpp  test_recognition_service.cpp  test_single_view_recognizer.cpp
strands_perception_msgs/: CMakeLists.txt
strands_perception_msgs/msg/: Table.msg
table_detection/: CMakeLists.txt  README.md  package.xml
table_segmentation/: CMakeLists.txt  package.xml
visualise_tables/: CMakeLists.txt  package.xml
visualize_pcd_indices/: CMakeLists.txt  README.md
world_state/: CMakeLists.txt  package.xml
(+80 files in other folders)
